--- a/app.less
+++ b/app.less
@@ -128,6 +128,9 @@ a.article{
         margin:0px;
         padding:0px;
       }
+      .map-embed{
+        height:300px;
+      }
       .source{
         text-align:right;
         margin-top:20px;
