--- a/templates/article.html
+++ b/templates/article.html
@@ -3,10 +3,10 @@
     <div class="row">
       <div class="col-sm-5 col-md-4 col-lg-3" id="article-overview">
         <img src="{{article.image}}" />
-        <h1>{{article.header}}<br/><span class="tag">{{article.tag}}</span></h1>
+        <h1>#{{article.tag}}<br/><span class="tag">{{article.header}}</span></h1>
       </div>
       <div class="col-sm-7 col-md-8 col-lg-9" id="article-content">
-        <div ng-repeat="data in article.data" class="article-block">
+        <div ng-repeat="data in article.data" class="article-block wow fadeInUp" data-wow-duration="450ms">
           <img ng-if="data.type=='image'" src="{{data.content}}" />
           <p ng-if="data.type=='paragraph'">{{data.content}}</p>
           <div ng-if="data.type=='map'" class="map-embed"></div>
