--- a/app.less
+++ b/app.less
@@ -155,9 +155,6 @@ a.article{
         margin:0px;
         padding:0px;
       }
-      .map-embed{
-        height:300px;
-      }
       .source{
         text-align:right;
         margin-top:20px;
@@ -172,6 +169,23 @@ a.article{
         }
       }
       border-bottom:1px solid #EAEAEA;
+    }
+  }
+  #article-cards{
+    .article-card{
+      padding:15px 0px;
+      border-bottom:1px solid #DDD;
+      .map-embed{
+        height:200px;
+        border-radius:5px;
+      }
+      h3{
+        font-weight:700;
+        font-size:1.1em;
+        text-align:center;
+        font-family:Roboto Slab;
+        margin-top:0px;
+      }
     }
   }
 }
