finished front end

--- a/app.less
+++ b/app.less
@@ -155,6 +155,21 @@ a.article{
         margin:0px;
         padding:0px;
       }
+
+      .sentiment{
+        &.Green{
+          color: #15CF21;
+        }
+        &.Libertarian{
+          color: #FF7300;
+        }
+        &.Conservative{
+          color: #1966D1;
+        }
+        &.Liberal{
+          color: #DE2121;
+        }
+      }
       .source{
         text-align:right;
         margin-top:20px;
