--- a/templates/article.html
+++ b/templates/article.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-3" id="article-overview">
-        <img src="{{article.image}}" />
+        <img src="img/uploads/{{article.image}}" />
         <h1>#{{article.tag}}<br/><span class="tag">{{article.header}}</span></h1>
       </div>
       <div class="col-sm-6" id="article-content">
