--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<a id="banner" style="background-image:url('{{articles[0].image}}')" href="#/article/{{articles[0].$id}}">
+<a id="banner" style="background-image:url('img/uploads/{{articles[0].image}}')" href="#/article/{{articles[0].$id}}">
   <div class="bottom">
     <div class="container">
       <h1 class="wow fadeIn">#{{articles[0].tag}} <span class="tag">{{articles[0].header}}</span></h1>
@@ -15,7 +15,7 @@
         <p>Read More...</p>
       </div>
       <div class="col-sm-3">
-        <img src="{{article.image}}" class="image" />
+        <img src="img/uploads/{{article.image}}" class="image" />
       </div>
     </div>
   </a>
