--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-sm-9">
         <h2>#{{article.tag}}<br/><span class="tag">#{{article.header}}</span></h2>
-        <p>{{article.description}}</p>
+        <p>{{article.description.substring(0, 500)}}..</p>
         <p>Read More...</p>
       </div>
       <div class="col-sm-3">
