--- a/app.less
+++ b/app.less
@@ -150,7 +150,13 @@ a.article{
         margin:0px;
         padding:0px;
       }
-
+      .fullImage{
+        cursor:zoom-in;
+        transition:all 500ms;
+        &.full{
+          cursor:zoom-out;
+        }
+      }
       .sentiment{
         &.Green{
           color: #15CF21;
