--- a/app.less
+++ b/app.less
@@ -153,6 +153,8 @@ a.article{
       .fullImage{
         cursor:zoom-in;
         transition:all 500ms;
+        position:relative;
+        z-index:98;
         &.full{
           cursor:zoom-out;
         }
