--- a/app.less
+++ b/app.less
@@ -155,8 +155,10 @@ a.article{
         transition:all 500ms;
         position:relative;
         z-index:98;
+        box-shadow:none;
         &.full{
           cursor:zoom-out;
+          box-shadow:0px 0px 20px rgba(0,0,0,0.5);
         }
       }
       .sentiment{
