--- a/app.less
+++ b/app.less
@@ -1,4 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
+html{
+  overflow-y:scroll;
+}
 #article-zoom-bg{
   background:rgba(255,255,255,0.92);
   position:fixed;
