--- a/app.less
+++ b/app.less
@@ -59,7 +59,11 @@ html{
     display:inline-block;
     text-decoration:none;
     opacity:0.8;
-    transition:opacity 200ms;
+    transition:all 200ms;
+    transform:rotate(0deg);
+    &.down{
+      transform:rotate(180deg);
+    }
     &:hover{
       opacity:1;
     }
