--- a/app.less
+++ b/app.less
@@ -135,6 +135,18 @@ a.article{
     width:100%;
     border-radius:5px;
   }
+  .inline-chart{
+    display:inline-block;
+    height:15px;
+    margin-left:10px;
+    position:relative;
+    opacity:0.5;
+    .inline-chart-bar{
+      width:50px;
+      vertical-align:bottom;
+      display:inline-block;
+    }
+  }
   h2{
     margin-top:0px;
     color:#000;
