--- a/app.less
+++ b/app.less
@@ -59,10 +59,14 @@ html{
     display:inline-block;
     text-decoration:none;
     opacity:0.8;
-    transition:all 200ms;
     transform:rotate(0deg);
     &.down{
-      transform:rotate(180deg);
+      transition:all 200ms;
+      transform:rotate(-180deg);
+    }
+    &.downComplete{
+      transition:all 200ms;
+      transform:rotate(-360deg);
     }
     &:hover{
       opacity:1;
@@ -142,7 +146,7 @@ a.article{
     position:relative;
     opacity:0.5;
     .inline-chart-bar{
-      width:50px;
+      width:25px;
       vertical-align:bottom;
       display:inline-block;
     }
@@ -242,4 +246,43 @@ a.article{
       }
     }
   }
+}
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+  -moz-animation: rotating 2s linear infinite;
+  -ms-animation: rotating 2s linear infinite;
+  -o-animation: rotating 2s linear infinite;
+  animation: rotating 2s linear infinite;
 }
