--- a/app.less
+++ b/app.less
@@ -142,6 +142,7 @@ a.article{
   .inline-chart{
     display:inline-block;
     height:50px;
+    margin-bottom:10px;
     margin-left:10px;
     position:relative;
     opacity:0.5;
