--- a/app.less
+++ b/app.less
@@ -139,6 +139,13 @@ a.article{
     width:100%;
     border-radius:5px;
   }
+  .emoji{
+    font-size:0.5em;
+    position:relative;
+    display:inline-block;
+    left:7px;
+    bottom:5px;
+  }
   .inline-chart{
     display:inline-block;
     height:50px;
