Emojis on articles

--- a/app.less
+++ b/app.less
@@ -183,6 +183,12 @@ a.article{
       .tag{
         font-size:1em;
       }
+      .emoji{
+        height:25px;
+        width:25px;
+        position:relative;
+        display:inline-block;
+      }
     }
   }
   #article-content{
