--- a/app.less
+++ b/app.less
@@ -73,6 +73,23 @@ html{
     }
     img{
       height:54px;
+      border-radius:100%;
+      /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+60,ffffff+63 */
+      background: rgb(0,0,0); /* Old browsers */
+      transition:all 200ms;
+      border:2px solid #FFF;
+      transform:rotate(0deg);
+      &:hover{
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0881dd+0,0881dd+61,ffffff+63 */
+        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#6db3f2+0,54a3ee+50,3690f0+51,1e69de+100;Blue+Gloss+%233 */
+        background: rgb(109,179,242); /* Old browsers */
+        background: -moz-radial-gradient(center, ellipse cover,  rgba(109,179,242,1) 0%, rgba(84,163,238,1) 50%, rgba(54,144,240,1) 51%, rgba(30,105,222,1) 100%); /* FF3.6-15 */
+        background: -webkit-radial-gradient(center, ellipse cover,  rgba(109,179,242,1) 0%,rgba(84,163,238,1) 50%,rgba(54,144,240,1) 51%,rgba(30,105,222,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: radial-gradient(ellipse at center,  rgba(109,179,242,1) 0%,rgba(84,163,238,1) 50%,rgba(54,144,240,1) 51%,rgba(30,105,222,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6db3f2', endColorstr='#1e69de',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+        transform:rotate(-360deg);
+        border:2px solid #FFF;
+      }
     }
   }
 }
