--- a/app.less
+++ b/app.less
@@ -318,3 +318,12 @@ a.article{
   -o-animation: rotating 2s linear infinite;
   animation: rotating 2s linear infinite;
 }
+#footer{
+  text-align:center;
+  opacity:0.7;
+  img{
+    display:inline-block;
+    margin:15px;
+    height:40px;
+  }
+}
